<resources>
    <string name="app_name">Gimel Gimel</string>
    <string name="debug_text">this is place holder debug text</string>
    <string name="activity_launcher_title">@string/app_name</string>
    <string name="activity_main_title">@string/app_name</string>
    <string name="geo_dd_format">N: %1$.6f E: %2$.6f</string>
    <string name="cesium_blank_fragment">Cesium blank fragment</string>
    <string name="activity_settings_title">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_gps">Gps</string>
    <string name="pref_header_messages">Messages</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="user_name_text_key">user_name_text</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">New Name</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="error">Error</string>
    <string name="error_settings_validation">Input is not valid. Please try again.</string>
    <string name="dialog_title_set_username">Enter Username</string>
    <string name="dialog_message_set_username">Please enter a unique username:</string>
    <string name="nav_menu_group_title_bubble_layers">Bubble Layers</string>
    <string name="nav_menu_group_title_layers">Static Layers</string>
    <string name="nav_menu_group_title_rasters">Rasters</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="sync_messages_frequency_key">sync_messages_frequency</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_gps_availability">Display Gps notifications</string>
    <string name="pref_title_gps_distance">Gps Distance Notification</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="notifications_gps_key">notifications_gps</string>
    <string name="gps_distance_key">gps_distance</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>
    <string-array name="pref_sync_gps_distance">
        <item>Any Distance</item>
        <item>5 meters</item>
        <item>10 meters</item>
        <item>30 meters</item>
        <item>100 meters</item>
        <item>500 meters</item>
    </string-array>
    <string-array name="pref_sync_gps_distance_values">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>100</item>
        <item>500</item>
    </string-array>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="activity_friends_title">FriendsActivity</string>
    <string name="menu_setting_title">Settings</string>
    <string name="menu_setting_friends">Friends</string>
    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_clear_map">Clear Map</string>
    <string name="dialog_send_massage_geo">Send Coordinates</string>
    <string name="dialog_send_message_geo_title">Send coordiantes</string>
    <string name="dialog_validation_failed_geo_text_message">
        Please enter location description
    </string>
    <string name="dialog_send_massage_text">Send your message</string>
    <string name="dialog_send_message_title">Send Message</string>
    <string name="dialog_send_message_invalid_empty_message">Message is empty!</string>
    <string name="dialog_send_message_ok">Send</string>
    <string name="dialog_send_message_cancel">Cancel</string>
    <string name="dialog_go_to_title">GoTo Dialog</string>
    <string name="dialog_go_to_positive_button">Send Me</string>
    <string name="dialog_go_to_negative_button">Cancel</string>
    <string name="dialog_go_to_latitude_text">Latitude:</string>
    <string name="dialog_go_to_altitude_text">Altitude:</string>
    <string name="dialog_go_to_longitude_text">Longitude:</string>
    <string name="dialog_go_to_optional_hint">(Optional)</string>
    <string name="dialog_go_to_invalid_input">Invalid input!</string>
    <string name="enter_text_hint">Enter text here..</string>
    <string name="viewer_my_location_name">My_Location</string>
    <string name="my_location_image_path">mipmap/self_location_marker.png</string>
    <string name="gps_off_title">GPS is disabled</string>
    <string name="gps_off_message">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="no_gps_signal">No GPS signal</string>
    <string name="no_network">No Network</string>
    <string name="no_3g_network">No 3G Network</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="locate_me_fab_no_known_location">Location unknown</string>
    <string name="fragment_messages_master_message_type">Message Type</string>
    <string name="message_list_item_time">HH:mm:ss</string>
    <string name="vector_layer_alert_message_template">Vector layer %1$s updated</string>
    <string name="username_default">@string/pref_default_display_name</string>
    <string name="navigation_home_item">Home</string>
    <string name="navigation_vector_item">Vector Manipulation</string>
    <string name="navigation_map_item">Map Manipulation</string>
    <string name="new_messages_default">0</string>
    <string name="message_info_default">Select A Message</string>
    <string name="message_detail_title_time">dd/MM/yyyy HH:mm:ss</string>
    <string name="fragment_messages_detail_goto">Go To</string>
    <string name="fragment_messages_detail_show_pin">Show On Map</string>
    <string name="fragment_messages_image_source_type">Source:</string>
    <string name="title_activity_image_fullscreen">ImageFullscreenActivity</string>
    <string name="fragment_message_container_details_placeholder">
        Click on Message for details
    </string>
    <string name="fragment_messages_image_location_unavailable">Unavailable</string>
    <string name="information_title">Information</string>
    <string name="fragment_message_detail_geo_location">Location</string>
    <string name="fragment_message_detail_geo_type">Location Type</string>
    <string name="fragment_message_detail_geo_text">message</string>
    <string name="message_notification_error">Problem occurred while sending</string>
    <string name="message_notification_sending">Sending message</string>
    <string name="message_notification_success">Message was sent successfully</string>
    <string name="message_notification_image_name">image</string>
    <string name="message_notification_geo_name">point</string>
    <string name="message_notification_text_name">message</string>
    <string name="text_message_hint">Type a message</string>
    <string name="send_image_fab_desc">Send Image</string>
    <string name="activity_action_draw_title">DrawActionActivity</string>
    <string name="sensors_container_title">Sensors</string>
    <string name="messages_container_title">Messages</string>
    <string name="bottom_panel_messages_counter">" (%1$d)"</string>
    <string name="map_entity_details_container_title">"Details: %1$s"</string>
    <string name="vector_layer_title_prefix">"Layer: "</string>
    <string name="new_vector_layer_alert_notification">Vector Layer Update</string>
    <string name="new_alert_notification">New Alert!</string>
    <string name="snackbar_new_message_text">New message</string>
    <string name="snackbar_new_message_action_text">show</string>
    <string-array name="name_generator_animals">
        <item>marabu</item>
        <item>cockroach</item>
        <item>mexican tarantula</item>
        <item>scorpion</item>
        <item>dragon</item>
        <item>sugar glider</item>
        <item>hedgehog</item>
        <item>skunk</item>
        <item>capybara</item>
        <item>fennec fox</item>
        <item>kinkajou</item>
        <item>serval</item>
        <item>wallaby</item>
        <item>squirrel monkey</item>
        <item>hyacinth macaw</item>
        <item>chimpanzee</item>
        <item>bearded lizard</item>
        <item>chinchilla</item>
        <item>crocodile</item>
        <item>piranha</item>
        <item>boa snake</item>
        <item>green iguana</item>
        <item>crab</item>
        <item>bush baby</item>
        <item>southern tamandua</item>
        <item>mini donkey</item>
        <item>pygmy goat</item>
        <item>axolotl</item>
        <item>bengal cat</item>
    </string-array>
</resources>