<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.teamagam.gimelgimel.app.view.settings.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.teamagam.gimelgimel.app.view.settings.SettingsActivity$GpsPreferenceFragment"
        android:icon="@drawable/ic_map_marker"
        android:title="@string/pref_header_gps" />

    <header
        android:fragment="com.teamagam.gimelgimel.app.view.settings.SettingsActivity$MessagesFragment"
        android:icon="@drawable/ic_message_black"
        android:tint="@color/black"
        android:title="@string/pref_header_messages" />

</preference-headers>
