<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/message_detail_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/spacing_small"
        android:layout_marginStart="@dimen/spacing_small"
        android:layout_marginTop="@dimen/spacing_large"
        android:orientation="vertical">

        <!-- Latitude Value -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_go_to_latitude_text" />

        <TextView
            android:id="@+id/coord_message_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Longitude Value -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_go_to_longitude_text" />

        <TextView
            android:id="@+id/coord_message_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/coordinate_goto_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:text="@string/dialog_go_to_positive_button" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
